// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <div
    className="pb-4"
    key="0"
  >
    <Tile
      heading="Personal Details"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    >
      <div>
        <span>
          <TiTick />
        </span>
        <span>
          Completed
        </span>
      </div>
    </Tile>
  </div>
  <div
    className="pb-4"
    key="1"
  >
    <Tile
      heading="Primary ID"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    />
  </div>
  <div
    className="pb-4"
    key="2"
  >
    <Tile
      heading="Secondary ID"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    >
      <div>
        <span>
          <TiTick />
        </span>
        <span>
          Completed
        </span>
      </div>
    </Tile>
  </div>
  <div
    className="pb-4"
    key="3"
  >
    <Tile
      heading="Address History"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    />
  </div>
  <div
    className="pb-4"
    key="4"
  >
    <Tile
      heading="Declaration and Risk Assessment"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    />
  </div>
  <div
    className="pb-4"
    key="5"
  >
    <Tile
      heading="PEP Search"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    />
  </div>
  <div
    className="pb-4"
    key="6"
  >
    <Tile
      heading="Experian "
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    >
      <div>
        <span>
          <TiTick />
        </span>
        <span>
          Completed
        </span>
      </div>
    </Tile>
  </div>
  <div
    className="pb-4"
    key="7"
  >
    <Tile
      heading="Report"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          View
        </Button>
      }
    />
  </div>
</div>
`;

exports[`checklist-detail ChecklistDetail should match snapshot when loading 1`] = `<Loader />`;

exports[`checklist-detail ChecklistDetail should match snapshot when not loading 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerBasic
    isScrollable={true}
  >
    <FlexContainerResponsive
      flexColumn={true}
      hasPadding={true}
    >
      <LevelRight>
        <LevelItem>
          <a
            onClick={[Function]}
          >
            Back to Client/Logout
          </a>
        </LevelItem>
        <LevelItem>
          <a>
            Customise Form
          </a>
        </LevelItem>
      </LevelRight>
      <Component
        status={
          Object {
            "addresses": false,
            "declarationRisk": false,
            "experian": true,
            "pepSearch": false,
            "primaryId": false,
            "profile": true,
            "report": false,
            "secondaryId": true,
          }
        }
        title="Ms Saoirse Chadwick"
      />
      <div
        className="pb-4"
        key="0"
      >
        <Tile
          heading="Personal Details"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        >
          <div>
            <span>
              <TiTick />
            </span>
            <span>
              Completed
            </span>
          </div>
        </Tile>
      </div>
      <div
        className="pb-4"
        key="1"
      >
        <Tile
          heading="Primary ID"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        />
      </div>
      <div
        className="pb-4"
        key="2"
      >
        <Tile
          heading="Secondary ID"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        >
          <div>
            <span>
              <TiTick />
            </span>
            <span>
              Completed
            </span>
          </div>
        </Tile>
      </div>
      <div
        className="pb-4"
        key="3"
      >
        <Tile
          heading="Address History"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        />
      </div>
      <div
        className="pb-4"
        key="4"
      >
        <Tile
          heading="Declaration and Risk Assessment"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        />
      </div>
      <div
        className="pb-4"
        key="5"
      >
        <Tile
          heading="PEP Search"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        />
      </div>
      <div
        className="pb-4"
        key="6"
      >
        <Tile
          heading="Experian "
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        >
          <div>
            <span>
              <TiTick />
            </span>
            <span>
              Completed
            </span>
          </div>
        </Tile>
      </div>
      <div
        className="pb-4"
        key="7"
      >
        <Tile
          heading="Report"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              View
            </Button>
          }
        />
      </div>
    </FlexContainerResponsive>
  </FlexContainerBasic>
  <Component
    afterClose={[MockFunction]}
    id="123"
    modalContentType="PROFILE"
    visible={true}
  />
</Connect(ErrorBoundary)>
`;
